[package]
name = "near-jsonrpc-client"
version = "0.0.0" # managed by cargo-workspaces, see below
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-jsonrpc-client-rs"
description = "Lower-level API for interfacing with the NEAR Protocol via JSONRPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "api", "jsonrpc", "rpc", "async"]
rust-version = "1.67.1"

# cargo-workspaces
[workspace.metadata.workspaces]
version = "0.5.0"

[dependencies]
log = "0.4.17"
borsh = "0.9.3"
serde = "1.0.145"
reqwest = { version = "0.11.12", features = ["json"], default-features = false }
thiserror = "1.0.37"
serde_json = "1.0.85"
lazy_static = "1.4.0"

near-crypto = "0.16.0"
near-primitives = "0.16.0"
near-chain-configs = "0.16.0"
near-jsonrpc-primitives = "0.16.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.1"

[features]
default = ["native-tls"]
any = []
sandbox = []
adversarial = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "auth"

[package.metadata.docs.rs]
features = ["any", "sandbox"]
